chore: fix config for Generate artifact attestation

--- a/.github/workflows/publish-image.yml
+++ b/.github/workflows/publish-image.yml
@@ -13,6 +13,11 @@ on:
   release:
     types: [published]
 
+permissions:
+  id-token: write
+  contents: write
+  attestations: write
+
 env:
   REGISTRY: dbgso
   IMAGE_NAME: markdown-to-pdf-with-figures
